pattern-wishcast/tests/ui/empty_enum_body.rs
// SPDX-FileCopyrightText: 2026 LunNova
//
// SPDX-License-Identifier: MIT

use pattern_wishcast::pattern_wishcast;

pattern_wishcast! {
	enum Empty = { };
}

fn main() {}
